--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm cache clean --force && npm install && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
